cmake_minimum_required(VERSION 3.22.1)
set(CMAKE_TRY_COMPILE_TARGET_TYPE "EXECUTABLE")
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} -std=c++20)
set(CMAKE_CXX_COMPILER "clang++")
project(FoxFireEngine)
file(GLOB FoxFireEngine_src CONFIGURE_DEPENDS "../inc/*.h" "../src/*.cpp")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin/)
add_executable(${PROJECT_NAME} ${FoxFireEngine_src})

